--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=ZendVN
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rjYtzJkbS/KtjhDpLA/tHl0dYigTmFoyu8IAyclQ5eM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,6 +12,8 @@ DB_PORT=3306
 DB_DATABASE=zendvn_project
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_DATABASE_OLD=zendcurrent
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -37,3 +39,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+STATUS_1="Active"
+STATUS_2="In Active"
+LIMIT_SHOW_LIST=10
